# encoder-pbiw

./: .gitignore  Fatorial.s  IPBIW.h  IPBIWInstruction.h  IPBIWPattern.h  IVLIWInstruction.h  IVLIWOperation.h  PBIW.cpp  PBIW.h  README  Teste.cpp  VexContextReorderTest.cpp  expression.h  factorial_32gr.s  fatorial.s  mergesort.s  pbiw_encoder.cpp  rVex64PBIWInstruction.cpp  rVex96PBIWPattern.h  rVexInstruction.cpp  rVexInstruction.h  rVexSyllable.cpp  rVexSyllable.h  rVexSyllableTest.cpp
src/: CMakeLists.txt  pbiw_encoder.cpp  pbiw_encoder.h
src/Encoder/: CMakeLists.txt  rVexEncoder.cpp  rVexEncoder.h
src/GenericAssembly/: CMakeLists.txt
src/GenericAssembly/Interfaces/: IContext.h  IFunction.h  IInstruction.h  ILabel.h  IOperand.h  IOperation.h  IPrinter.h  ISection.h
src/GenericAssembly/Utils/: CanCopy.h  DependencyChains.h  DerivedFrom.h  LabelScope.h  OperandVector.cpp  OperandVector.h
src/GenericEncoder/: GenericEncoderInterface.h
src/PBIW/: BaseOptimizer.cpp  BaseOptimizer.h  CMakeLists.txt  FullPBIW.cpp  FullPBIW.h  Label.h  Operand.cpp  Operand.h  Operation.cpp  Operation.h  PBIW.cpp  PBIW.h  PBIWOptimizerDataSet.cpp  PBIWOptimizerDataSet.h  PBIWOptimizerJoinPatterns.cpp  PBIWOptimizerJoinPatterns.h  PartialPBIW.cpp  PartialPBIW.h  PartialPBIWPrinter.cpp  PartialPBIWPrinter.h  UnitaryPattern.cpp  UnitaryPattern.h  rVex64PBIWInstruction.cpp  rVex64PBIWInstruction.h  rVex96PBIWPattern.cpp  rVex96PBIWPattern.h
src/PBIW/Generic/: Codec.cpp  Codec.h  Configuration.cpp  Configuration.h  Factory.cpp  Factory.h  GenericPBIW.cpp  GenericPBIW.h  Instruction.cpp  Instruction.h  Label.cpp  Label.h  Operand.cpp  Operand.h  Operation.cpp  Operation.h  Pattern.cpp  Pattern.h  Printer.cpp  Printer.h
src/PBIW/Interfaces/: ILabel.h  IOperand.h  IOperation.h  IPBIW.h  IPBIWFactory.h  IPBIWInstruction.h  IPBIWOptimizer.h  IPBIWOptimizerJoinPatterns.h  IPBIWPattern.h  IPBIWPrinter.h  IPBIWSet.h  IPattern.h  IVLIWInstruction.h
src/PBIW/Printers/: PartialPBIWDebugPrinter.cpp  PartialPBIWDebugPrinter.h  PartialPBIWPrinter.cpp  PartialPBIWPrinter.h
src/PBIW/Utils/: OperandItem.h  OperandItemDTO.h  OperandVector.cpp  OperandVector.h  OperandVectorDTO.cpp  OperandVectorDTO.h
src/Sparc/: CMakeLists.txt  help.txt  layout.txt
src/Sparc/pbiw/: Encode.cpp  Encode.h  EncodeInstruction.cpp  EncodeInstruction.h  EncodePattern.cpp  EncodePattern.h  OriginalInstruction.cpp  (+3 more)
src/Time/: ExecutionTime.cpp  ExecutionTime.h
src/VexGrammar/: fatorial.s  grammar.c  lex.c  lex.l
src/VexParser/: VexContext.cpp  VexContext.h  VexOpcodes.h  VexSyllableFactory.cpp  VexSyllableFactory.h  VexTypes.h  driver.cc  driver.h  parser.tab.cc  parser.tab.hh  parser.yy  scanner.cc  scanner.ll  vexopc.h  vextypes.h
src/rVex/: CMakeLists.txt  Instruction.cpp  Instruction.h  Label.cpp  Label.h  Operand.cpp  Operand.h  Syllable.cpp  Syllable.h  SyllableALU.cpp  SyllableALU.h  SyllableCTRL.cpp  SyllableCTRL.h  SyllableMEM.cpp  SyllableMEM.h  SyllableMISC.cpp  SyllableMISC.h  SyllableMUL.cpp  SyllableMUL.h  rVex.h
(+412 files in other folders)
